# Ink

./: .gitignore  Cargo.toml  LICENSE  README.md  example.lua  flake.nix
.github/workflows/: cache-cleanup.yml  main.yml
examples/: widget.lua
examples/actions/: main.lua
examples/async_services/: config.lua  main.lua
examples/bar/: example.lua  main.lua
examples/clipboard/: main.lua
examples/custom_notification/: main.lua  notifications.lua
examples/full/: main.lua
examples/full/modules/: containers.lua  system.lua
examples/gemini/: main.lua
examples/gemini_widget/: main.lua
examples/hot_reload/: main.lua
examples/launcher/: config.lua  main.lua
examples/misc/: main.lua
examples/modularize/: config.lua  main.lua
examples/modularize/modules/: basics.lua  containers.lua  system.lua
examples/modularize_test/: config.lua  main.lua
examples/modularize_test/components/: buttons.lua  inputs.lua  media.lua
examples/multi_window/: main.lua
examples/notification_daemon/: main.lua
examples/osd/: config.lua  main.lua
examples/path/: lib.lua
examples/relative_path/: main.lua
examples/system_notification/: main.lua
examples/tray/: main.lua
examples/weather/: icons.lua  main.lua
src/: app.rs  config.rs  error.rs  main.rs  register.rs  ui.rs
src/core/: config.rs  context.rs  error.rs
src/interop/: converter.rs  mod.rs  signals.rs
src/lua/: api.rs  config.rs  framework.rs  load.rs  mod.rs  util.rs  widget.rs
src/scripting/: globals.rs  lua_driver.rs  mod.rs  stdlib.rs  traits.rs  widget_wrapper.rs
src/services/: apps.rs  audio.rs  dbus_service.rs  desktop_entry.rs  fs.rs  json.rs  mod.rs  system.rs  tray_api.rs
src/styles/: main.scss  window.scss
src/tools/: generator.rs
src/tools/templates/: config.lua.tera  definitions.lua.tera  ink.lua.tera
src/ui/: builder.rs  catalog.rs  mod.rs  registry.rs  strategy.rs  traits.rs
