[package]
name = "ink"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
gtk4 = { version = "0.10.2", package = "gtk4"}
gtk4-layer-shell = "0.7.1"
glib = "0.21.3"
gobject-sys = "0.21.2"
gio = "0.21.4"
cairo-rs = "0.21.2"
pango = "0.21.3"
rsass = "0.29.2"
mlua = { version = "0.11.4", features = ["lua54", "vendored"] }
clap = { version = "4.0", features = ["derive"] }
once_cell = "1.18"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"] } 
