[package]
name = "ink"
version = "0.1.2"
edition = "2024"
license = "MIT"

[dependencies]
gtk4 = { version = "0.10.2", package = "gtk4"}
gtk4-layer-shell = "0.7.1"
glib = "0.21.3"
gobject-sys = "0.21.2"
gio = "0.21.4"
cairo-rs = "0.21.2"
pango = "0.21.3"
rsass = "0.29.2"
mlua = { version = "0.11.4", features = ["lua54", "vendored", "serialize"] }
clap = { version = "4.0", features = ["derive"] }
once_cell = "1.18"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"] } 
libpulse-binding = "2.30.1"
md5 = "0.7.0"
serde_json = "1.0.145"
notify-rust = "4.10.0"
